--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <script type="module" src="{{ url_for('static', path='main.js') }}"></script>
+<script type="module" src="{{ url_for('static', path='main.js') }}"></script>
 
-    <section id="features">
-        <table class="ui grey table">
-            <caption></caption>
-            <thead>
+<section id="features">
+    <table class="ui grey table">
+        <caption></caption>
+        <thead>
             <tr>
                 <th scope="col">Command</th>
                 <th scope="col">Command Name</th>
@@ -16,85 +16,90 @@
                 <th scope="col">Action</th>
                 <th scope="col">Logs</th>
             </tr>
-            </thead>
-            {% for job in jobs %}
-                <tr>
-                    <td>
-                        <div class="ui custom button">Show Command</div>
-                        <div class="ui custom popup">
-                            <pre><code class="bash">{{ job.command }}</code></pre>
-                        </div>
-                    </td>
-                    <td>
-                        <pre>{{ job.name }}</pre>
-                    </td>
-                    <td>
-                        <pre><code class="bash">{{ job.schedule }}</code></pre>
-                    </td>
-                    <td>
-                        <pre><code class="bash">{{ job.next_run }}</code></pre>
-                    </td>
-                    <td>
-                        <pre><code class="bash">{{ job.status }}</code></pre>
-                    </td>
-                    <td>
-                        <a href="/">
-                            <button type="button" class="ui grey basic button" value={{ job.id }}><i
-                                    class="play icon"></i>
-                            </button>
-                        </a>
-                        <a href="/jobs/{{ job.id }}" class="btn btn-primary">
-                            <button type="button"
-                                    class="ui inverted primary button">Update
-                            </button>
-                        </a>
-                        <a href="/">
-                            <button id="delete" type="button" class="ui inverted red button" value={{ job.id }}>Delete
-                            </button>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="/logs/{{ job.id }}" class="btn btn-primary">
-                            <button type="button"
-                                    class="ui blue button">Logs
-                            </button>
-                        </a>
-                    </td>
-                </tr>
-            {% endfor %}
-        </table>
-        <p>
-            <button id="add_job" class="ui inverted green button">Add Job</button>
-        </p>
-    </section>
-
-
-
-
-    <div class="ui modal">
-        <em class="close icon"></em>
-        <div class="header">
-            Add Job
-        </div>
-        <div class="content">
-            <form class="ui form" onsubmit="">
-                <div class="field">
-                    <label>Command</label>
-                    <label for="command"></label><input type="text" name="command" placeholder="echo Hello World"
-                                                        id="command" required>
+        </thead>
+        {% for job in jobs %}
+        <tr>
+            <td>
+                <div class="ui custom button">Show Command</div>
+                <div class="ui custom popup">
+                    <pre><code class="bash">{{ job.command }}</code></pre>
                 </div>
-                <div class="field">
-                    <label>Command Name</label>
-                    <label for="command_name"></label><input type="text" name="command_name" placeholder="Command Name"
-                                                             id="command_name">
+            </td>
+            <td>
+                <pre>{{ job.name }}</pre>
+            </td>
+            <td>
+                <div class="ui custom button">
+                    <pre><code class="bash">{{ job.schedule }}</code></pre>
                 </div>
-                <div class="field">
-                    <label>Schedule</label>
-                    <label for="schedule"></label><input type="text" name="schedule" placeholder="* * * * *"
-                                                         id="schedule">
+                <div class="ui custom popup">
+                    <div style="text-align: left;">
+                        <strong>Cron Expression:</strong> {{ job.schedule }}<br><br>
+                        <strong>Format:</strong> minute hour day month weekday<br>
+                        <strong>Next execution:</strong> {{ job.next_run }}
+                    </div>
                 </div>
-                <button id="save" class="ui blue button">Submit</button>
-            </form>
-        </div>
+            </td>
+            <td>
+                <pre><code class="bash">{{ job.next_run }}</code></pre>
+            </td>
+            <td>
+                <pre><code class="bash">{{ job.status }}</code></pre>
+            </td>
+            <td>
+                <a href="/">
+                    <button type="button" class="ui grey basic button" value={{ job.id }}><i class="play icon"></i>
+                    </button>
+                </a>
+                <a href="/jobs/{{ job.id }}" class="btn btn-primary">
+                    <button type="button" class="ui inverted primary button">Update
+                    </button>
+                </a>
+                <a href="/">
+                    <button id="delete" type="button" class="ui inverted red button" value={{ job.id }}>Delete
+                    </button>
+                </a>
+            </td>
+            <td>
+                <a href="/logs/{{ job.id }}" class="btn btn-primary">
+                    <button type="button" class="ui blue button">Logs
+                    </button>
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    <p>
+        <button id="add_job" class="ui inverted green button">Add Job</button>
+    </p>
+</section>
+
+
+
+
+<div class="ui modal">
+    <em class="close icon"></em>
+    <div class="header">
+        Add Job
     </div>
+    <div class="content">
+        <form class="ui form" onsubmit="">
+            <div class="field">
+                <label>Command</label>
+                <label for="command"></label><input type="text" name="command" placeholder="echo Hello World"
+                    id="command" required>
+            </div>
+            <div class="field">
+                <label>Command Name</label>
+                <label for="command_name"></label><input type="text" name="command_name" placeholder="Command Name"
+                    id="command_name">
+            </div>
+            <div class="field">
+                <label>Schedule</label>
+                <label for="schedule"></label><input type="text" name="schedule" placeholder="* * * * *" id="schedule">
+            </div>
+            <button id="save" class="ui blue button">Submit</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
