--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,7 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
-    <script type="module" src="{{ url_for('static', path='main.js') }}"></script>
-    <h1>Log</h1>
-    <pre><code>{{ job.log }}</code></pre>
-    <br>
+<script type="module" src="{{ url_for('static', path='main.js') }}"></script>
+<h1>Logs - {{ job.name }}</h1>
+<div class="ui segment">
+    <h3>Command</h3>
+    <pre><code class="bash">{{ job.command }}</code></pre>
+</div>
+<div class="ui segment">
+    <h3>Schedule</h3>
+    <pre><code class="bash">{{ job.schedule }}</code></pre>
+</div>
+<div class="ui segment">
+    <h3>Output</h3>
+    <pre><code>{{ log_content }}</code></pre>
+</div>
+<a href="/" class="ui button">← Back to Jobs</a>
+<br><br>
 {% endblock %}
