Refactor main.js pour remplacer jQuery par JavaScript vanilla, amélioration de la gestion des événements et des requêtes fetch. Mise à jour des fichiers HTML pour corriger le type de script et améliorer la structure.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<script type="module" src="{{ url_for('static', path='main.js') }}"></script>
+<script src="{{ url_for('static', path='main.js') }}"></script>
 
 <section id="features">
     <table class="ui grey table">
