--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,44 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Python Crontab WEB UI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
     <!-- Code Highlighting -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="https://semantic-ui.com/javascript/library/highlight.min.js"></script>
 
-    <link rel="icon" type="image/png" href="static/lcs.png"/>
+    <link rel="icon" type="image/png" href="static/lcs.png" />
+
+    <style>
+        /* Styles pour les modals sans jQuery */
+        .ui.modal {
+            display: none;
+            position: fixed;
+            z-index: 1001;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .ui.modal.visible.active {
+            display: block !important;
+        }
+
+        body.dimmable.dimmed::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.85);
+            z-index: 1000;
+        }
+    </style>
 </head>
+
 <body>
 
-<div class="ui inverted segment">
-    <div class="ui inverted secondary menu">
-        <a class="active item" href="/">
-            Python Crontab UI
-        </a>
-        <a class="item" href="/">
-            <img src="{{ url_for('static', path='lcs.png') }}" alt="" width="30" height="30">
-        </a>
+    <div class="ui inverted segment">
+        <div class="ui inverted secondary menu">
+            <a class="active item" href="/">
+                Python Crontab UI
+            </a>
+            <a class="item" href="/">
+                <img src="{{ url_for('static', path='lcs.png') }}" alt="" width="30" height="30">
+            </a>
+        </div>
     </div>
-</div>
 
 
-<div class="ui container">
-    <br>
-    <br>
-    {% block content %}
-    {% endblock %}
-</div>
+    <div class="ui container">
+        <br>
+        <br>
+        {% block content %}
+        {% endblock %}
+    </div>
 
 
-<script>
-    hljs.initHighlightingOnLoad();
-</script>
+    <script>
+        hljs.initHighlightingOnLoad();
+    </script>
 
 </body>
+
 </html>
