--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<script type="module" src="{{ url_for('static', path='main.js') }}"></script>
+<script src="{{ url_for('static', path='main.js') }}"></script>
 <h1>Logs - {{ job.name }}</h1>
 <div class="ui segment">
     <h3>Command</h3>
