Modification du titre dans le menu pour afficher "Cron Jobs Manager" au lieu de "Python Crontab UI".

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,15 +45,13 @@
     <div class="ui inverted segment">
         <div class="ui inverted secondary menu">
             <a class="active item" href="/">
-                Python Crontab UI
+                Cron Jobs Manager
             </a>
             <a class="item" href="/">
                 <img src="{{ url_for('static', path='lcs.png') }}" alt="" width="30" height="30">
             </a>
         </div>
     </div>
-
-
     <div class="ui container">
         <br>
         <br>
