Ajout de la fonction get_cron_description pour générer des descriptions lisibles des expressions cron, et enrichissement des jobs avec leur description localisée dans la vue principale. Ajout de la fonction get_locale_from_accept_language pour extraire la locale depuis le header Accept-Language. Mise à jour des dépendances dans requirements.txt.

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,8 @@
                 </div>
                 <div class="ui custom popup">
                     <div style="text-align: left;">
-                        <strong>Cron Expression:</strong> {{ job.schedule }}<br><br>
+                        <strong>Cron Expression:</strong> {{ job.schedule }}<br>
+                        <strong>Description:</strong> <em>{{ job.cron_description }}</em><br><br>
                         <strong>Format:</strong> minute hour day month weekday<br>
                         <strong>Next execution:</strong> {{ job.next_run }}
                     </div>
