--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
         <caption></caption>
         <thead>
             <tr>
+                <th scope="col">Active</th>
                 <th scope="col">Command</th>
                 <th scope="col">Command Name</th>
                 <th scope="col">Schedule</th>
@@ -18,7 +19,14 @@
             </tr>
         </thead>
         {% for job in jobs %}
-        <tr>
+        <tr class="{{ 'disabled-job' if not job.is_active else '' }}">
+            <td>
+                <div class="ui toggle checkbox">
+                    <input type="checkbox" class="job-toggle" data-job-id="{{ job.id }}" {{ 'checked' if job.is_active
+                        else '' }}>
+                    <label></label>
+                </div>
+            </td>
             <td>
                 <div class="ui custom button">Show Command</div>
                 <div class="ui custom popup">
@@ -42,13 +50,14 @@
                 </div>
             </td>
             <td>
-                <pre><code class="bash">{{ job.next_run }}</code></pre>
+                <pre><code class="bash">{{ job.is_active and job.next_run or '(désactivé)' }}</code></pre>
             </td>
             <td>
                 <pre><code class="bash">{{ job.status }}</code></pre>
             </td>
             <td>
-                <button type="button" class="ui grey basic button" value={{ job.id }}><i class="play icon"></i>
+                <button type="button" class="ui grey basic button" value={{ job.id }} {{ 'disabled' if not job.is_active
+                    else '' }}><i class="play icon"></i>
                 </button>
                 <a href="/jobs/{{ job.id }}" class="btn btn-primary">
                     <button type="button" class="ui inverted primary button">Update
