Ajout de la fonctionnalité de fermeture du modal. Implémentation de la fonction closeModal pour gérer la fermeture via le bouton de fermeture, le clic en dehors du modal et la touche Escape. Ajout d'un bouton "Cancel" pour fermer le modal.

--- a/templates/home.html
+++ b/templates/home.html
@@ -104,7 +104,8 @@
                 <label>Schedule</label>
                 <label for="schedule"></label><input type="text" name="schedule" placeholder="* * * * *" id="schedule">
             </div>
-            <button id="save" class="ui blue button">Submit</button>
+            <button id="save" type="button" class="ui blue button">Submit</button>
+            <button id="cancel" type="button" class="ui button">Cancel</button>
         </form>
     </div>
 </div>
